--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,30 @@
     transform: rotate(360deg);
   }
 }
+
+.carousel {
+  width: 100vh;
+
+  height: 300px; /* Adjust the height as needed */
+}
+
+.carousel-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/* .imgslider {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 800px;
+} */
