--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,54 @@
   margin: 0 auto;
   max-width: 800px;
 } */
+
+.bg-gray-200 {
+  background-color: #e5e5e5;
+}
+
+.slide {
+  background-color: brown;
+  width: 70%;
+  height: 500px;
+  margin: auto;
+  margin-top: 2rem;
+  position: relative;
+}
+
+.carousel-inner {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-fit: fit;
+}
+.filter-label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
+}
+.chooseFilter {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+.productDetails {
+  /* background-color: blueviolet; */
+  width: 52%;
+  padding-left: 3rem;
+  padding-right: 5rem;
+  /* margin: auto; */
+}
+.productImage {
+  /* background-color: brown; */
+  width: 38%;
+  /* height: 1000%; */
+  /* margin: auto; */
+  /* margin-top: 2rem; */
+  /* position: relative; */
+}
+.productImage > img {
+  width: 100%;
+  height: 100%;
+  /* position: absolute; */
+  object-fit: cover;
+}
