--- a/src/App.css
+++ b/src/App.css
@@ -118,8 +118,8 @@
   background-color: #1d1c1c;
   color: #fff;
 }
-.navbar {
+.navbaaar {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 100;
 }
