--- a/src/App.css
+++ b/src/App.css
@@ -123,3 +123,27 @@
   top: 0;
   z-index: 100;
 }
+@media (max-width: 576px) {
+  .full-width-sm {
+    width: 100% !important;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .navbar-nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .nav-link {
+    margin: 5px 0;
+  }
+}
+@media (max-width: 576px) {
+  .carousel-image {
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+  }
+}
