--- a/src/App.css
+++ b/src/App.css
@@ -37,26 +37,6 @@
   }
 }
 
-.carousel {
-  width: 100vh;
-
-  height: 300px; /* Adjust the height as needed */
-}
-
-.carousel-slide {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-}
-
-.carousel-image {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
 /* .imgslider {
   display: flex;
   justify-content: center;
@@ -68,21 +48,6 @@
   background-color: #e5e5e5;
 }
 
-.slide {
-  background-color: brown;
-  width: 70%;
-  height: 500px;
-  margin: auto;
-  margin-top: 2rem;
-  position: relative;
-}
-
-.carousel-inner {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  object-fit: fit;
-}
 .filter-label {
   display: flex;
   align-items: center;
@@ -100,14 +65,11 @@
   padding-right: 5rem;
   /* margin: auto; */
 }
+
 .productImage {
-  /* background-color: brown; */
   width: 38%;
-  /* height: 1000%; */
-  /* margin: auto; */
-  /* margin-top: 2rem; */
-  /* position: relative; */
 }
+
 .productImage > img {
   width: 100%;
   height: 100%;
@@ -123,27 +85,91 @@
   top: 0;
   z-index: 100;
 }
-@media (max-width: 576px) {
+/* @media (max-width: 576px) {
   .full-width-sm {
     width: 100% !important;
     padding-left: 0;
     padding-right: 0;
   }
-}
+} */
 
 @media (max-width: 576px) {
-  .navbar-nav {
+  .navbar-collapse {
+    width: 100%;
+    display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    justify-content: center;
+    /* align-items: center; */
+    /* align-items: flex-start; */
   }
   .nav-link {
     margin: 5px 0;
   }
 }
-@media (max-width: 576px) {
+/* @media (max-width: 576px) {
   .carousel-image {
     height: 100%;
     object-fit: cover;
     width: 100%;
   }
+} */
+@media only screen and (max-width: 576px) {
+  .navbar-nav {
+    width: 100%;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .navbar-nav {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar-collapse {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    /* align-items: flex-start; */
+  }
+  .nav-link {
+    margin: 5px 0;
+  }
+}
+
+.carousel {
+  width: 100vw;
+
+  height: 300px;
+}
+
+.slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  height: 500px;
+  margin: auto;
+  margin-top: 2rem;
+  position: relative;
+}
+
+.carousel-inner {
+  /* background-color: yellow; */
+  width: 100%;
+  height: 100%;
+  /* position: absolute; */
+  /* object-fit: fit; */
+}
+.carousel-item {
+  height: 100%;
+}
+.carousel-inner > .carousel-item > img {
+  width: 100%;
+  height: 100%;
+  /* position: absolute; */
+  object-fit: cover;
 }
